--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,162 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.header {
+  background-color: #161b22;
+  padding: 20px;
+  border-bottom: 1px solid #2d3748;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header-title {
+  font-size: 24px;
+  font-weight:300;
+  color: #fff;
+  margin-left: 20px;
 }
+
+
+.header-left {
+  width: 50%;
+  display:flex;
+  align-items: center;
+
+}
+
+
+.header-logo {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12);
+  margin-left:20px;
+}
+
+.header-button {
+  font-size: 24px;
+  font-weight:300;
+  margin-top: 5px;
+  margin-right: 20px;
+  height: 50px;
+  float: right;
+  background-color: yellow;
+  color: black;
+  padding: 10px;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.header-bottom-img{
+
+  width: 100%;
+  height: 300px;
+  background-color: #fff;
+  
+
+}
+
+.profile-card {
+  width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.profile-image {
+  height: 100px;
+  float:left;
+  margin-left: 10%;
+  background-color: #161b22;
+  border-radius: 50%;
+}
+
+.profile-info {
+  text-align: center;
+}
+
+.profile-info h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.followers,
+.following {
+  font-weight: bold;
+}
+
+
+.followers:after,
+.following:after {
+  content: ':';
+}
+
+.profile-class{
+  margin-bottom: 5%;
+}
+
+.profile-class a {
+  color: blue;
+  margin-left: 10%;
+
+}
+
+.profile-class p {
+  font-size: 16px;
+  margin-left: 10%;
+}
+
+.a {
+  color: blue;
+  float: left;
+
+
+}
+
+.body-card {
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  
+  margin-top: 2%;
+
+
+
+}
+
+.body-card1 {
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 1%;
+}
+
+.body-card p , .body-card1 {
+  font-size:medium;
+  font-weight:100;
+  margin-bottom: 10px;
+  
+
+}
+
+.tweet-person, .tweet-person1{
+  color: blue;
+  margin-top: 70px;
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
